--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="logo__icon" src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
           </picture>
-          <svg class="logo__text" width="128" height="24">
+          <svg class="logo__text" width="101" height="19">
             <use xlink:href="img/icons/sprite.svg#logo-text"></use>
           </svg>
         </a>
@@ -63,11 +63,11 @@
                 <span>Вкус</span><span>Курица</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>700 р.</span>
+                <span>Цена</span><span>700 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -90,11 +90,11 @@
                 <span>Вкус</span><span>Курица</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>1000 р.</span>
+                <span>Цена</span><span>1000 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -117,11 +117,11 @@
                 <span>Вкус</span><span>Рыба</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>700 р.</span>
+                <span>Цена</span><span>700 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -144,11 +144,11 @@
                 <span>Вкус</span><span>Рыба</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>1000 р.</span>
+                <span>Цена</span><span>1000 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -162,7 +162,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Slim <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -171,11 +171,11 @@
                 <span>Вкус</span><span>Гречка</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>700 р.</span>
+                <span>Цена</span><span>400 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -189,7 +189,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-                <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">1000 г</a>
+                <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Slim <br class="br-not-mobile">1000 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>1000 г</span>
@@ -198,11 +198,11 @@
                 <span>Вкус</span><span>Гречка</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>1000 р.</span>
+                <span>Цена</span><span>700 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -216,7 +216,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Slim <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -225,11 +225,11 @@
                 <span>Вкус</span><span>Рис</span>
               </div>
               <div class="product-card__info product-card__info--price">
-                <span>Цена</span><span>700 р.</span>
+                <span>Цена</span><span>500 Р.</span>
               </div>
             </div>
             <div class="product-card__button">
-              <a href="" class="button">Заказать</a>
+              <a href="" class="button product-card__order-bbutton">Заказать</a>
             </div>
           </div>
         </li>
@@ -258,7 +258,7 @@
                 <span>Сахарозаменитель</span>
               </div>
               <div class="product-card-extra__weight">
-                <span>1 упаковка (100г)</span>
+                <span>1 упаковка (100 г)</span>
               </div>
               <div class="product-card-extra__price">
                 <span>200 Р.</span>
@@ -299,7 +299,7 @@
                 <span>Витамины</span>
               </div>
               <div class="product-card-extra__weight">
-                <span>1 упаковка (30г)</span>
+                <span>1 упаковка (30 г)</span>
               </div>
               <div class="product-card-extra__price">
                 <span>300 Р.</span>
@@ -338,7 +338,7 @@
         <ul class="social__list">
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--vk" width="30" height="22">
+              <svg class="social__icon social__icon--vk" width="23" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-vkontakte"></use>
               </svg>
               <span class="visually-hidden">Мы ВКонтакте</span>
@@ -346,7 +346,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--inst" width="23" height="23">
+              <svg class="social__icon social__icon--inst" width="16" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-instagram"></use>
               </svg>
               <span class="visually-hidden">Мы в Инстаграмме</span>
@@ -354,7 +354,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--fb" width="28" height="33">
+              <svg class="social__icon social__icon--fb" width="22" height="22">
                 <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
